// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compoponents/layout/main-wrapper/sidebar displays YouTube menu item if using YouTube 1`] = `
<nav id="sidebar" class="side side-nav showing">
  <section class="music">
    <h1>Your Music</h1>
    <ul class="menu">
      <li><a href="#!/home" class="home active">Home</a></li>
      <li><a href="#!/queue" class="queue">Current Queue</a></li>
      <li><a href="#!/songs" class="songs">All Songs</a></li>
      <li><a href="#!/albums" class="albums">Albums</a></li>
      <li><a href="#!/artists" class="artists">
          Artists
        </a></li>
      <li><a href="#!/youtube" class="youtube">
          YouTube Video
        </a></li>
    </ul>
  </section>
  <section id="playlists" current-view="HOME">
    <h1>Playlists
      <i role="button" title="Create a new playlist" class="fa fa-plus-circle control create"></i></h1>
    <!---->
    <ul>
      <li class="playlist favorites"><a href="#!/favorites" class="">Favorites</a>
        <!---->
        <nav>
          <ul tabindex="-1" class="menu playlist-item-menu" style="top: 0px; left: 0px; display: none;">
            <li>Edit</li>
            <li>Delete</li>
          </ul>
        </nav>
      </li>
      <li class="playlist recently-played"><a href="#!/recently-played" class="">Recently Played</a>
        <!---->
        <nav>
          <ul tabindex="-1" class="menu playlist-item-menu" style="top: 0px; left: 0px; display: none;">
            <li>Edit</li>
            <li>Delete</li>
          </ul>
        </nav>
      </li>
    </ul>
    <nav>
      <ul tabindex="-1" class="menu playlist-menu" style="top: 0px; left: 0px; display: none;">
        <li>New Playlist</li>
        <li>New Smart Playlist</li>
      </ul>
    </nav>
  </section>
  <!---->
</nav>
`;

exports[`compoponents/layout/main-wrapper/sidebar displays management menu items for admin 1`] = `
<nav id="sidebar" class="side side-nav showing">
  <section class="music">
    <h1>Your Music</h1>
    <ul class="menu">
      <li><a href="#!/home" class="home active">Home</a></li>
      <li><a href="#!/queue" class="queue">Current Queue</a></li>
      <li><a href="#!/songs" class="songs">All Songs</a></li>
      <li><a href="#!/albums" class="albums">Albums</a></li>
      <li><a href="#!/artists" class="artists">
          Artists
        </a></li>
      <li><a href="#!/youtube" class="youtube">
          YouTube Video
        </a></li>
    </ul>
  </section>
  <section id="playlists" current-view="HOME">
    <h1>Playlists
      <i role="button" title="Create a new playlist" class="fa fa-plus-circle control create"></i></h1>
    <!---->
    <ul>
      <li class="playlist favorites"><a href="#!/favorites" class="">Favorites</a>
        <!---->
        <nav>
          <ul tabindex="-1" class="menu playlist-item-menu" style="top: 0px; left: 0px; display: none;">
            <li>Edit</li>
            <li>Delete</li>
          </ul>
        </nav>
      </li>
      <li class="playlist recently-played"><a href="#!/recently-played" class="">Recently Played</a>
        <!---->
        <nav>
          <ul tabindex="-1" class="menu playlist-item-menu" style="top: 0px; left: 0px; display: none;">
            <li>Edit</li>
            <li>Delete</li>
          </ul>
        </nav>
      </li>
    </ul>
    <nav>
      <ul tabindex="-1" class="menu playlist-menu" style="top: 0px; left: 0px; display: none;">
        <li>New Playlist</li>
        <li>New Smart Playlist</li>
      </ul>
    </nav>
  </section>
  <section class="manage">
    <h1>Manage</h1>
    <ul class="menu">
      <li><a href="#!/settings" class="settings">Settings</a></li>
      <li><a href="#!/users" class="users">Users</a></li>
    </ul>
  </section>
</nav>
`;

exports[`compoponents/layout/main-wrapper/sidebar displays new version info 1`] = `
<nav id="sidebar" class="side side-nav showing">
  <section class="music">
    <h1>Your Music</h1>
    <ul class="menu">
      <li><a href="#!/home" class="home active">Home</a></li>
      <li><a href="#!/queue" class="queue">Current Queue</a></li>
      <li><a href="#!/songs" class="songs">All Songs</a></li>
      <li><a href="#!/albums" class="albums">Albums</a></li>
      <li><a href="#!/artists" class="artists">
          Artists
        </a></li>
      <li><a href="#!/youtube" class="youtube">
          YouTube Video
        </a></li>
    </ul>
  </section>
  <section id="playlists" current-view="HOME">
    <h1>Playlists
      <i role="button" title="Create a new playlist" class="fa fa-plus-circle control create"></i></h1>
    <!---->
    <ul>
      <li class="playlist favorites"><a href="#!/favorites" class="">Favorites</a>
        <!---->
        <nav>
          <ul tabindex="-1" class="menu playlist-item-menu" style="top: 0px; left: 0px; display: none;">
            <li>Edit</li>
            <li>Delete</li>
          </ul>
        </nav>
      </li>
      <li class="playlist recently-played"><a href="#!/recently-played" class="">Recently Played</a>
        <!---->
        <nav>
          <ul tabindex="-1" class="menu playlist-item-menu" style="top: 0px; left: 0px; display: none;">
            <li>Edit</li>
            <li>Delete</li>
          </ul>
        </nav>
      </li>
    </ul>
    <nav>
      <ul tabindex="-1" class="menu playlist-menu" style="top: 0px; left: 0px; display: none;">
        <li>New Playlist</li>
        <li>New Smart Playlist</li>
      </ul>
    </nav>
  </section>
  <section class="manage">
    <h1>Manage</h1>
    <ul class="menu">
      <li><a href="#!/settings" class="settings">Settings</a></li>
      <li><a href="#!/users" class="users">Users</a></li>
    </ul>
  </section>
</nav>
`;

exports[`compoponents/layout/main-wrapper/sidebar renders properly 1`] = `
<nav id="sidebar" class="side side-nav showing">
  <section class="music">
    <h1>Your Music</h1>
    <ul class="menu">
      <li><a href="#!/home" class="home active">Home</a></li>
      <li><a href="#!/queue" class="queue">Current Queue</a></li>
      <li><a href="#!/songs" class="songs">All Songs</a></li>
      <li><a href="#!/albums" class="albums">Albums</a></li>
      <li><a href="#!/artists" class="artists">
          Artists
        </a></li>
      <!---->
    </ul>
  </section>
  <!---->
  <!---->
</nav>
`;
